backend connected, need submit to work and heroku

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -38,6 +38,9 @@
             type="text"
           />
           <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          <button class="btn btn-primary btn-block py-3" type="submit">
+            ADD NOTE
+          </button>
         </div>
       </div>
     </div>
